# ceph-charms

./: AGENTS.md  pytest.ini  tox.ini
.github/: ISSUE_TEMPLATE.md
ceph-dashboard/: charmcraft.yaml  metadata.yaml  pyproject.toml  requirements.txt  tox.ini
ceph-dashboard/src/: ceph_dashboard_commands.py  charm.py  charm_option.py  interface_http.py  interface_radosgw_user.py
ceph-dashboard/terraform/: locals.tf  main.tf  offers.tf  outputs.tf  variables.tf
ceph-dashboard/tests/: target.py  tests.yaml
ceph-dashboard/tests/bundles/: resolute-tentacle.yaml
ceph-dashboard/unit_tests/: __init__.py  test_ceph_dashboard_charm.py  test_ceph_dashboard_commands.py  test_interface_http.py
ceph-fs/: charmcraft.yaml  tox.ini
ceph-iscsi/: tox.ini
ceph-mon/: .gitignore  .gitreview  Makefile  actions.yaml  charm-helpers-hooks.yaml  charmcraft.yaml  config.yaml  metadata.yaml  osci.yaml  pyproject.toml  rename.sh  requirements.txt  test-requirements.txt  tox.ini
ceph-mon/actions/: action_venv.py  ceph_ops.py  create_cache_tier.py  create_pool.py  crushmap_update.py  delete_erasure_profile.py  delete_pool.py  delete_user.py  get_or_create_user.py  get_quorum_status.py  list_crush_rules.py  list_erasure_profiles.py  list_inconsistent_objs.py  list_pools.py  pg_repair.py  pool_get.py  pool_set.py  pool_statistics.py  purge_osd.py  remove_cache_tier.py  remove_pool_snapshot.py  rename_pool.py  security_checklist.py  set_noout.py  set_pool_max_bytes.py  show_disk_free.py  snapshot_pool.py  unset_noout.py
ceph-mon/src/: ceph_client.py
ceph-mon/terraform/: README.md  locals.tf  offers.tf  variables.tf
ceph-mon/tests/: target.py  tests.yaml
ceph-mon/tests/bundles/: bionic-ussuri.yaml  focal-ussuri-ec.yaml  focal-ussuri.yaml  noble-caracal.yaml  resolute-tentacle.yaml
ceph-mon/tests/workflow_assets/: ceph-cos.yaml  ci_helpers.sh  run-cos-integration.sh  teardown-cos-integration.sh
ceph-mon/tests/workflow_assets/k8s/: 01-setup-lxd-vm.sh  02-deploy-k8s.sh  03-juju-add-cloud.sh  04-deploy-cos-lite.sh  05-verify-cos.sh
ceph-mon/unit_tests/: test_action_change_osd_weight.py  test_action_list_inconsistent.py  test_action_purge_osd.py  test_actions_mon.py  test_ceph_actions.py  test_ceph_client_key_handling.py  test_ceph_hooks.py  test_ceph_utils.py  test_status.py
ceph-nfs/: charmcraft.yaml  config.yaml  pyproject.toml  requirements.txt  tox.ini
ceph-nfs/src/: charm.py
ceph-nfs/templates/: ganesha.conf
ceph-nfs/terraform/: locals.tf  main.tf  offers.tf  outputs.tf  variables.tf
ceph-nfs/tests/: tests.yaml
ceph-nfs/tests/bundles/: resolute-tentacle.yaml
ceph-nvme/: charmcraft.yaml  config.yaml  pyproject.toml  tox.ini
ceph-nvme/src/: nvmf.py  proxy.py
ceph-nvme/terraform/: locals.tf  main.tf  offers.tf  outputs.tf  variables.tf
ceph-nvme/tests/: tests.yaml
ceph-nvme/tests/bundles/: resolute-tentacle.yaml
ceph-nvme/unit_tests/: utils.py
(+147 files in other folders)
